<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/on_bording_background"
    tools:context=".authentication.SignInUserFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/phoneNumber"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edPhoneNumberSIU"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/text_views_background"
        android:ems="10"
        android:hint="@string/exMobileNumber"
        android:inputType="phone"
        android:padding="14dp"
        android:textSize="14sp"
        android:textDirection="locale"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@+id/edPhoneNumberSIU"
        app:layout_constraintTop_toBottomOf="@+id/edPhoneNumberSIU" />

    <EditText
        android:id="@+id/edPasswordSIU"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/text_views_background"
        android:ems="10"
        android:hint="********"
        android:inputType="textPassword"
        android:padding="16dp"
        android:gravity="start"
        android:textDirection="locale"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imgShowHidePasswordSIU"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginEnd="32dp"
        android:src="@android:drawable/btn_dialog"
        app:layout_constraintBottom_toBottomOf="@+id/edPasswordSIU"
        app:layout_constraintEnd_toEndOf="@+id/edPasswordSIU"
        app:layout_constraintTop_toTopOf="@+id/edPasswordSIU" />

    <TextView
        android:id="@+id/tvForgetPasswordSIU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/forgetPassword"
        app:layout_constraintEnd_toEndOf="@+id/edPasswordSIU"
        app:layout_constraintTop_toBottomOf="@+id/edPasswordSIU" />

    <Button
        android:id="@+id/btnSignInUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/signIn"
        android:background="@drawable/btn_solid"
        android:textColor="#fff"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgetPasswordSIU"
        app:layout_constraintVertical_bias="0.18" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>